--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
     "bcrypt": "^4.0.1",
     "body-parser": "^1.19.0",
     "clarifai": "^2.9.1",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "knex": "^0.20.15",
     "pg": "^7.18.2"
